--- a/resources/sass/1-tools/_vars.scss
+++ b/resources/sass/1-tools/_vars.scss
@@ -21,7 +21,7 @@ $white: #FFF;
 // Brown : #795548
 // Purple: #673AB7
 
-$primary-color: #2196F3;
+$primary-color: #38c172;;
 
 // Complementry color is used to indecate the loading bar on the top
 // of the page with pace.js plugin
