--- a/resources/sass/3-component/_widgets.scss
+++ b/resources/sass/3-component/_widgets.scss
@@ -1,4 +1,12 @@
 // Componant: Widget
+.home-widget a {
+    text-decoration: none;
+}
+
+.home-widget .widget-small:hover {
+    -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
+}
 
 .widget-small {
 	display: flex;
